--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
 				align-items: center;
 			}
 		</style>
-		<div><img src="/assets/imgs/fLibPNG.PNG" alt="" width="100%" height="100%" /></div>
+		<div><img src="/assets/imgs/fLibjpg.jpg" alt="" width="100%" height="100%" /></div>
 </html>
