--- a/index.html
+++ b/index.html
@@ -13,11 +13,25 @@
 				padding: 0;
 				background-color: #000000;
 			}
-
-			div {
-				padding-top: 10px;
-				align-items: center;
+			
+			#main {
+				width: 100%;
+				height: 110rem;
+				background: url(/assets/imgs/fLibjpg.jpg) no-repeat center fixed;
+				background-size: 100% 100%;
+				overflow: hidden;
 			}
+
+			@media only screen and (max-width: 480px) {
+				#main {
+					background-size: 100% 100%;
+				}
+			}
+
+
 		</style>
-		<div><img src="/assets/imgs/fLibjpg.jpg" alt="" width="100%" height="100%" /></div>
+
+		
+		<div id="main">
+		</div>
 </html>
