updated file location

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			#main {
 				width: 100%;
 				height: 110rem;
-				background: url(/assets/imgs/fLibjpg.jpg) no-repeat center fixed;
+				background: url(/assets/fLibjpg.jpg) no-repeat center fixed;
 				background-size: 100% 100%;
 				overflow: hidden;
 			}
@@ -31,7 +31,8 @@
 
 		</style>
 
-		
+
 		<div id="main">
+			<p>.</p>
 		</div>
 </html>
