--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 				background-color: #000000;
 			}
 			
+	
 			#main {
 				width: 100%;
 				height: 110rem;
-				background: url(/assets/fLibjpg.jpg) no-repeat center fixed;
+				background: url(/assets/menu.jpg) no-repeat center fixed;
 				background-size: 100% 100%;
 				overflow: hidden;
 			}
 
 			@media only screen and (max-width: 480px) {
-				#main {
+			#main {
 					background-size: 100% 100%;
 				}
 			}
@@ -33,6 +34,6 @@
 
 
 		<div id="main">
-			<p>.</p>
+			
 		</div>
 </html>
