--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 				padding: 0;
 				background-color: #000000;
 			}
-			
-	
+
 			#main {
 				width: 100%;
 				height: 110rem;
@@ -24,16 +23,12 @@
 			}
 
 			@media only screen and (max-width: 480px) {
-			#main {
+				#main {
 					background-size: 100% 100%;
 				}
 			}
-
-
 		</style>
 
-
-		<div id="main">
-			
-		</div>
+		<div id="main"></div>
+	</body>
 </html>
