--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			#main {
 				width: 100%;
 				height: 110rem;
-				background: url(/assets/menu.jpg) no-repeat center fixed;
+				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat center fixed;
 				background-size: 100% 100%;
 				overflow: hidden;
 			}
