--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 			#main {
 				width: 100%;
-				height: 110rem;
-				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat fixed;
+				height: 80rem;
+				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat center fixed;
 				background-size: 95% 100%;
 				overflow: hidden;
 			}
 
 			@media only screen and (max-width: 480px) {
 				#main {
-					background-size: 100% 72%;
+					background-size: 95% 75%;
 				}
 			}
 		</style>
