--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 			#main {
 				width: 100%;
 				height: 80rem;
-				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat center fixed;
+				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat fixed;
+				background-position-x: center;
 				background-size: 95% 100%;
 				overflow: hidden;
 			}
 
 			@media only screen and (max-width: 480px) {
 				#main {
-					background-size: 95% 75%;
+					background-size: 95% 65%;
 				}
 			}
 		</style>
