--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				height: 45rem;
 				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat fixed;
 				background-position-x: center;
+				background-position-y: center;
 				background-size: 95% 100%;
 				overflow: hidden;
 			}
