--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 			#main {
 				width: 100%;
-				height: 45rem;
+				height: 721px;
 				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat fixed;
 				background-position-x: center;
-				background-position-y: center;
+				/* background-position-y: center; */
 				background-size: 95% 100%;
 				overflow: hidden;
 			}
 
 			@media only screen and (max-width: 480px) {
 				#main {
-					background-size: 95% 100%;
+					background-size: 97% 100%;
 				}
 			}
 		</style>
