--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 				height: 721px;
 				background: url(https://dev-corey.github.io/forbiddenLibations/assets/menu.jpg) no-repeat fixed;
 				background-position-x: center;
-				/* background-position-y: center; */
+				background-position-y: center;
 				background-size: 95% 100%;
 				overflow: hidden;
 			}
 
 			@media only screen and (max-width: 480px) {
 				#main {
-					background-size: 97% 100%;
+					background-size: 97% 97%;
 				}
 			}
 		</style>
