--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 					background-size: 97% 90%;
 				}
 			}
+
+			@media only screen and (min-width: 900px) {
+				#main {
+					width: 100%;
+					height: 100rem;
+					background-size: 35% 90%;
+				}
+			}
 		</style>
 
 		<div id="main"></div>
