--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 				}
 			}
 
-			@media only screen and (min-width: 900px) {
+			@media only screen and (min-width: 600px) {
+				#main {
+					width: 100%;
+					height: 100rem;
+					background-size: 80% 90%;
+				}
+			}
+
+			@media only screen and (min-width: 1200px) {
 				#main {
 					width: 100%;
 					height: 100rem;
